# wideboy

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  README.md  compose.common.yml  compose.dev.yml  compose.prod.yml  dietpi.txt.example  docker-compose.yml  docker.env  mypy.ini  pyproject.toml  settings.toml  settings.yml  test.py
.github/workflows/: black.yml  codeql.yml  docker.yml  flake8.yml  mypy.yml
etc/: wideboy.service
scenes/: default.yml
testing/: joypad.py  pygame_simple.py
testing/sprites/: __main__.py  helpers.py  scratch.py  tiles.py  utils.py
wideboy/: __init__.py  __main__.py  __main__.py.bak  components.py  config.py  constants.py  consts.py  entities.py  homeassistant.py  utils.py
wideboy/controller/: __init__.py
wideboy/director/: __init__.py
wideboy/display/: __init__.py
wideboy/engine/: __init__.py  events.py  scenes.py
wideboy/homeassistant/: __init__.py  hass.py  mqtt.py
wideboy/mqtt/: __init__.py  entities.py  homeassistant.py
wideboy/scenes/: __init__.py  _base.py  _utils.py  animation.py  base.py  blank.py  default.py  manager.py
wideboy/sprites/: __init__.py  _base.py  animation.py  animation_helpers.py  base.py  common.py  graphics.py  image_helpers.py  images.py
wideboy/state/: __init__.py  store.py
wideboy/systems/: animation.py  boot.py  core.py  display.py  draw.py  homeassistant.py  mqtt.py  preprocess.py  scene.py
wideboy/testing/: grouptest.py
wideboy/utils/: device.py  display.py  events.py  hass.py  helpers.py  images.py  logger.py  mqtt.py  pygame.py  scenes.py  state.py  tasks.py
(+88 files in other folders)
