[tool.poetry]
name = "wideboy"
version = "0.1.0"
description = "WideBoy RGB Matrix Display Board"
authors = ["Louis King <jinglemansweep@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.24.2"
pillow = "^9.4.0"
paho-mqtt = "^1.6.1"
simplejson = "^3.18.3"
types-paho-mqtt = "^1.6.0.5"
dynaconf = "^3.1.12"
pyyaml = "^6.0"
pygame-ce = "^2.2.1"
types-pyyaml = "^6.0.12.12"
ecs-pattern = "^1.2.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.6.0"
types-toml = "^0.10.8.7"
types-pillow = "^9.4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
